Fix slider button height on mobile.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -656,11 +656,6 @@ footer {
     height: 100%; 
 }
 
-.lSSlideWrapper,
-.lSSlideWrapper .lSFade > * {
-    height: 100%;
-}
-
 #itemfiles .media-render {
     height: 100%;
     display: flex;
@@ -701,6 +696,10 @@ footer {
     font-weight: 900;
     font-size: 18px;
     vertical-align: top;
+}
+
+.lg-container button {
+    height: auto;
 }
 
 .items.show.gallery .item-metadata {
