--- a/css/style.css
+++ b/css/style.css
@@ -663,11 +663,6 @@ input[type=checkbox] {
     height: 100%;
   }
 
-  .lSSlideWrapper,
-.lSSlideWrapper .lSFade > * {
-    height: 100%;
-  }
-
   #itemfiles .media-render {
     height: 100%;
     display: flex;
@@ -708,6 +703,10 @@ input[type=checkbox] {
     font-weight: 900;
     font-size: 18px;
     vertical-align: top;
+  }
+
+  .lg-container button {
+    height: auto;
   }
 
   .items.show.gallery .item-metadata {
